<resources>
    <!-- Main search activity strings -->
    <string name="app_name">SUSHEE</string>
    <string name="search_field">Quick search with name</string>
    <string name="helper_text">Advanced Search</string>
    <string name="specifier_text">General search not specific enough?</string>
    <string name="title_bar_name">SUSHEE</string>

    <!-- Advanced search strings -->
    <string name="advanced_search">Advanced Search</string>
    <string name="lettering_text">Vessel Name</string>
    <string name="permit_text">Universal Vessel Identifier</string>
    <string name="gear_text">IMO Number</string>
    <string name="country_text">Country</string>

    <!-- Data intent retrieval strings. -->
    <string name="simple_query">simple_query</string>
    <string name="search_data">search_data</string>
    <string name="expanded_data">expanded_data</string>

    <!-- Row data. -->
    <string name="vessel_name">%1$s</string>
    <string name="owner">Owner: %1$s</string>
    <string name="year">Build Year: %1$s</string>
    <string name="country">Country: %1$s    </string>
    <string name="imo">IMO: %1$s</string>
    <string name="uvi">UVI: %1$s</string>
    <string name="length">Length: %1$s %2$s</string>
    <string name="tonnage">Tonnage: %1$s %2$s</string>
    <string name="vessel_stats">Vessel Stats:</string>

    <!-- Simple search strings -->
    <string name="no_results">No results found, try searching again</string>
    <string name="return_search">Search Again</string>

</resources>
