<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.darrienglasser.goatfish.ExpandedView"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/vessel_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/vessel_name" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/year"/>

            <TextView
                android:id="@+id/length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/length"/>

            <TextView
                android:id="@+id/flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/country"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/vessel_stats" />

            <TextView
                android:id="@+id/imo_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/imo"/>

            <TextView
                android:id="@+id/uvi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/uvi"/>

            <TextView
                android:id="@+id/tonnage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/tonnage"/>

            <TextView
                android:id="@+id/owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/owner"/>


        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>
