<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.darrienglasser.goatfish.AdvancedSearchActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/lettering_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lettering_text"
                    android:drawableStart="@drawable/ic_boat_lettering_icon"
                    android:drawableLeft="@drawable/ic_boat_lettering_icon"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/permit_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/permit_text"
                    android:drawableStart="@drawable/ic_permit_icon"
                    android:drawableLeft="@drawable/ic_permit_icon"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/gear_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gear_text"
                    android:drawableStart="@drawable/ic_gear_icon"
                    android:drawableLeft="@drawable/ic_gear_icon"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/flagView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country_text"
                    android:drawableStart="@drawable/ic_flag_icon"
                    android:drawableLeft="@drawable/ic_flag_icon"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/forward_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:clickable="true"
                android:src="@drawable/ic_forward_icon" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
